# gc-analyzer

./: .gitignore  Cargo.toml  config.json
gc-data/: 0374 - Jun 08 2025, 08;24.fusion-data  0374 - Jun 08 2025, 08;29.fusion-data  1827555 - Jun 04 2024, 14;45.fusion-data  1828056 - Jun 05 2024, 05;51.fusion-data  182857 - Jun 04 2024, 14;38.fusion-data  1829195 - Jun 04 2024, 14;50.fusion-data  1829633 - Jun 05 2024, 05;46.fusion-data  1829831 - Jun 05 2024, 08;43.fusion-data  1829903 - Jun 04 2024, 06;52.fusion-data  1830547 - Jun 06 2024, 21;36.fusion-data  1830577 - Jun 06 2024, 21;26.fusion-data  1830656 - Jun 05 2024, 06;21.fusion-data  1830660 - Jun 05 2024, 06;03.fusion-data  1830663 - Jun 05 2024, 06;39.fusion-data  1830672 - Jun 05 2024, 06;07.fusion-data  18307203 - Jun 04 2024, 07;01.fusion-data  1830736 - Jun 04 2024, 13;12.fusion-data  1830863 - Jun 04 2024, 11;44.fusion-data  1830863 - Jun 04 2024, 11;49.fusion-data  1830864 - Jun 05 2024, 07;36.fusion-data  1830865 - Jun 04 2024, 12;29.fusion-data  1830867 - Jun 04 2024, 11;07.fusion-data  1830867 - Jun 04 2024, 11;13.fusion-data  1830867 - Jun 04 2024, 11;19.fusion-data  1831161 - Jun 04 2024, 11;59.fusion-data  1831163 - Jun 04 2024, 12;05.fusion-data  1831170 - Jun 04 2024, 18;27.fusion-data  1831172 - Jun 04 2024, 17;57.fusion-data  1831173 - Jun 04 2024, 18;41.fusion-data  1831174 - Jun 04 2024, 17;17.fusion-data  1831175 - Jun 04 2024, 17;38.fusion-data  1831176 - Jun 05 2024, 05;35.fusion-data  1831176 - Jun 05 2024, 05;39.fusion-data  1831177 - Jun 04 2024, 19;23.fusion-data  1831178 - Jun 05 2024, 05;43.fusion-data  1831179 - Jun 04 2024, 17;50.fusion-data  1831180 - Jun 04 2024, 17;45.fusion-data  1831217 - Jun 06 2024, 12;00.fusion-data  1831224 - Jun 05 2024, 08;21.fusion-data  1831225 - Jun 05 2024, 08;29.fusion-data  (+954 more)
lib/refrigerants/: Cargo.toml
lib/refrigerants/src/: lib.rs
lib/signal-pipeline/: Cargo.toml
lib/signal-pipeline/src/: io.rs  lib.rs  peak_detection.rs  preprocess.rs
src/: main.rs  math.rs  refrigerant.rs
src/processing/: mod.rs
src/processing/signal/: mod.rs  peaks.rs
