[package]
name = "gc-analyzer"
edition = "2024"
version = "0.1.0"

[dependencies]
good_lp = { version = "1.14.0", features = [
    "clarabel",
], default-features = false }
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nalgebra = "0.33.2"
itertools = "0.14.0"
statrs = "0.18.0"
plotters = { version = "0.3.7", features = ["surface_series", "colormaps"] }
clap = { version = "4.5.40", features = ["derive"] }
